# academic-application-tracker

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GUIDELINES.md  OPPORTUNITIES.md  ORCHESTRATOR_HANDOFF.md  PHASE_4_GUIDELINES.md  PROGRESS.md  README.md  RECOMMENDERS.md  SECURITY.md  TASKS.md  app.py  config.py  database.py  exports.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roadmap.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/adr/: README.md
docs/dev-notes/: dev-setup.md  extending.md  git-workflow-depth.md  handoff-remove-interview-offer-from-edit-picker.md  self-host-setup.md  streamlit-state-gotchas.md
docs/internal/: AGENTS.md  ORCHESTRATOR_HANDOFF.md  TASKS.md
docs/seed-templates/: README.md  RECOMMENDERS.md
docs/ui/: wireframes.md
docs/ui/screenshots/v0.5.0/: .seed-snippet.py
pages/: 1_Opportunities.py  2_Applications.py  3_Recommenders.py  4_Export.py
reviews/: DESIGN-review-2026-04-23-second-pass.md  DESIGN-review-2026-04-23.md  README.md  opportunities-page-bug-fix-2026-04-25-review.md  phase-1-review.md  phase-2-review.md  phase-3-Tier2&3-review.md  phase-3-Tier4-ABC-review.md  phase-3-Tier4-full-review.md  phase-3-review.md  phase-3-tier5-premerge.md  phase-3-tier5-review.md  phase-4-Tier1-review.md  phase-4-Tier2-review.md  phase-4-Tier3-review.md  phase-4-Tier4-review.md  phase-4-Tier5-review.md  phase-4-Tier6-review.md  phase-4-finish-cohesion-smoke.md  phase-5-Tier2-review.md  phase-5-Tier3-review.md  phase-5-finish-cohesion-smoke.md  phase-5-tier1-review.md  phase-5-tier4-review.md  phase-5-tier5-review.md  phase-5-tier6-review.md  phase-6-finish-cohesion-smoke.md  phase-6-tier1-review.md  phase-6-tier2-review.md  phase-6-tier3-review.md  phase-6-tier4-review.md  phase-6-tier5-review.md  phase-7-CL1-review.md  phase-7-CL2-review.md  phase-7-CL3-review.md  phase-7-CL4-review.md  phase-7-CL5-review.md  phase-7-finish-cohesion-smoke.md  phase-7-tier1-review.md  phase-7-tier2-review.md  (+4 more)
scripts/: release.sh
tests/: conftest.py  helpers.py  pre-publish-tests-review-2026-05-07.md  test_app_page.py  test_applications_page.py  test_config.py  test_database.py  test_export_page.py  test_exports.py  test_helpers.py  test_opportunities_page.py  test_pages_cohesion.py  test_recommenders_page.py  test_rules.py
