# Project tooling config. The [project] block carries metadata for
# tooling compatibility (linters, IDEs, GitHub linguist) — but
# the project still ships as a Streamlit app, NOT a published
# Python package. Install via `pip install -r requirements.txt`
# per GUIDELINES §1; do NOT expect `pip install .` to work.

[project]
name = "academic-application-tracker"
version = "0.10.0"
description = "Local-first Streamlit app for tracking postdoc / PhD / faculty / fellowship applications — positions, interviews, recommendation letters, deadlines."
authors = [{ name = "Yu Zheng" }]
readme = "README.md"
license = "MIT"
keywords = [
    "streamlit",
    "sqlite",
    "academic",
    "application-tracker",
    "job-tracker",
    "postdoc",
    "phd",
    "python",
]
# Python floor declared so pip warns users on too-old interpreters; the
# project itself is not a published package (no [build-system] block) —
# install path is `pip install -r requirements.txt` per GUIDELINES §1.
# Floor is 3.11 because that's the lowest version pandas 3.0 + numpy 2.4
# (pinned in requirements.txt) support; the dev environment uses 3.14.
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/YuZh98/academic-application-tracker"
Repository = "https://github.com/YuZh98/academic-application-tracker"
Issues = "https://github.com/YuZh98/academic-application-tracker/issues"
Changelog = "https://github.com/YuZh98/academic-application-tracker/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "docs",       # contains screenshot seed snippets, not source
    "exports",    # generated markdown output
    "__pycache__",
    ".venv",
]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle errors (E) and warnings (W). A deliberately
# tight starter set — extend in a follow-up once the cadence is comfortable.
# `I` (isort) is intentionally excluded for now: enabling it would reformat
# 9 import blocks across the codebase, scope creep for this PR. Add it
# alongside the format-the-world reformat in a follow-up.
select = ["E", "F", "W"]
# E501 (line-too-long) is not enforced yet; existing code reaches 224 chars
# and a format-the-world reformat is a separate PR.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Format is configured but NOT yet enforced via CI / pre-commit. When the
# 14-file reformat lands as its own PR, add `ruff-format` to the hook list.

[tool.pyright]
# Phase 7 cleanup CL1: type-check fence in CI. Matches PR #22's working
# point ("basic" mode) — strict would require widespread additional
# annotations and is out of scope here. Re-runs of pyright against this
# config must stay clean for every subsequent PR (CI gate).
# Per-file strict overrides (via # pyright: strict at top of file):
#   config.py — pure constants, zero project imports; strict since v0.10.x
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Scope to project source + tests. Top-level files like requirements.txt,
# pyproject.toml itself, and CI configs aren't Python so don't need
# explicit include — pyright's default file discovery handles them, but
# being explicit keeps the type-check surface predictable across CI fresh
# clones and local runs.
include = [
    "app.py",
    "config.py",
    "database.py",
    "exports.py",
    "pages",
    "tests",
]
# .venv (local virtualenv) and __pycache__ are auto-discovered junk; docs
# contains screenshot seed snippets, not source; exports is generated
# markdown output (.gitignored locally but a fresh CI clone may still see
# stub directories in some setups).
exclude = [
    ".venv",
    "**/__pycache__",
    "docs",
    "exports",
    "build",
    "dist",
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "docs/*",
    "tests/*",
    "conftest.py",
]
